# NV2_ENGINE

./: .gitignore  AI_IMPLEMENTATION_SUMMARY.md  AI_PHASE2_ROADMAP.md  AI_TECHNICAL_DOCS.md  BLOCK_INTERACTION_EXAMPLE.md  BUG_FIX_REPORT.md  CHANGELOG.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_GUIDE.md  MVP_SUMMARY.md  NV_ENGINE.sln  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  SOLUTION_COMPLETE.md  TECHNOLOGIES_AND_CURRENT_IMPLEMENTATION.md  TERRAIN_GENERATOR_QUICK_REFERENCE.md  TERRAIN_OPTIMIZATION_COMPLETE.md  TERRAIN_SYSTEM_GUIDE.md  engine_font_log.txt  generate_textures.py  leaf_write_check_debug_run.err
Assets/Blocks/: jack_o_lantern.png.mcmeta  kelp.png.mcmeta  (+2 more)
Core/: Cargo.toml
Core/Assets/Fonts/Subtitles/: README.md
Core/Src/: assets.rs  commands.rs  crafting.rs  input.rs  interaction.rs  inventory.rs  main.rs  settings.rs  shader.wgsl
Core/Src/Render/: Vertices.rs  camera.rs  mesh.rs  mod.rs  texture.rs  texture_atlas.rs
Core/Src/World/: biomes.rs  block.rs  chunk.rs  generator.rs  liquid.rs  mod.rs  palette.rs  raycast.rs  vegetation.rs  worldgen.rs
Core/Src/renderer/: Instance.rs  camera.rs  instance.rs  menu.rs  mesh.rs  mod.rs  shader.wgsl  text.rs  text.wgsl  texture.rs  texture_atlas.rs  texture_registry.rs  ui.wgsl  ui_sprite.wgsl  vertices.rs
Core/Src/world/: ai_generator.rs  biomes.rs  block.rs  chunk.rs  decoration_ai.rs  decorations.rs  generator.rs  liquid.rs  mod.rs  online_trainer.rs  palette.rs  raycast.rs  vegetation.rs  worldgen.rs
VulkanLayers/: README.md  VkLayer_NV20.json
(+1981 files in other folders)
